--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.3.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "babel-plugin-styled-components": "^1.10.7",
+    "next": "^9.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.0.1",
+    "styled-reset": "^4.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.2",
+    "@types/react": "^16.9.23",
+    "@types/styled-components": "^5.0.1",
+    "typescript": "^3.8.3"
   }
 }
