--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "next": "^9.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.0.1",
-    "styled-reset": "^4.1.2"
+    "styled-reset": "^4.1.2",
+    "twilio": "^3.41.1",
+    "twilio-video": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^13.9.2",
